@@ -16,6 +16,8 @@ cdebconf (0.133) UNRELEASED; urgency=low
     respectively.
   * Change special handling of partman/choose_partition to use the absence of
     '>' as the first character instead of relying on spaces.
+  * Fix column alignment support for special questions
+    (e.g.  partman/choose_partition).
 
  -- Frans Pop <fjp@debian.org>  Fri, 18 Jul 2008 08:03:07 +0200
 
